[package]
name = "remove_old_arch_pkgs"
version = "0.1.0"
authors = ["GONI Guillaume <gdn3@live.fr>"]
edition = "2018"
include = ["src/**/*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
version-compare = "0.1.0"
regex = { version = "1.5.5", optional = true }
lazy_static = { version = "1.4.0", optional = true }
chrono = { version = "0.4.19", default-features = false, features = ["std", "clock"], optional = true }

[features]
default = ["use_regex", "chrono"]
use_regex = ["regex", "lazy_static"]
# chrono = ["chrono"]
