[package]
name = "remove_old_arch_pkgs"
version = "0.1.0"
authors = ["GONI Guillaume <gdn3@live.fr>"]
edition = "2021"
include = ["src/**/*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
version-compare = "0.2.0"
regex = { version = "1.10.6", optional = true }
chrono = { version = "0.4.38", default-features = false, features = ["std", "clock"], optional = true }

[features]
default = ["chrono", "regex"]
